--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "smsBox PHP API Wrapper",
+    "name": "gridonic/guzzle-smsbox",
     "type": "library",
     "description": "A PHP Wrapper for the smsBox HTTP XML API",
-    "keywords": ["smsbox, api, xml"],
+    "keywords": ["Guzzle", "smsBox"],
     "authors": [
         {
             "name": "Peter Siska",
@@ -11,9 +11,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "guzzle/guzzle": "*"
+        "guzzle/guzzle": "*",
+        "monolog/monolog": "*"
     },
     "autoload": {
-        "psr-0": { "Gridonic\\SmsBox": "src/" }
+        "psr-0": { "Gridonic\\Guzzle\\SmsBox": "src/" }
     }
 }
