--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
   - 5.4
 before_script:
   - wget --quiet http://getcomposer.org/composer.phar
-  - php composer.phar install --install-suggests
+  - php composer.phar install
   - cp phpunit.xml.dist phpunit.xml
 script: phpunit
