Fixed composer file

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
     "autoload": {
         "psr-0": { "Gridonic\\Guzzle\\SmsBox": "src/" }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev"
 }
