--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./tests/bootstrap.php"
+         backupStaticAttributes="false"
          colors="true"
          processIsolation="false"
+         stopOnFailure="false"
+         syntaxCheck="false"
          verbose="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true">
 
     <testsuites>
-        <testsuite name="gridonic-guzzle-smsbox">
-            <directory>./tests/Gridonic/Guzzle/SmsBox/Tests</directory>
+        <testsuite name="Gridonic Guzzle SmsBox Test Suite">
+            <directory>./tests/Gridonic/</directory>
         </testsuite>
     </testsuites>
 
