--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "php": ">=5.3.2",
         "guzzle/guzzle": "*"
     },
+    "require-dev": {
+        "monolog/monolog": "*"
+    },
     "suggest": {
         "monolog/monolog": "*"
     },
